--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"Andero_SMP.aternos.me","name":"noobdaabhay","port":"55522"}
+{"ip":"GwSmpLifesteal.aternos.me:","name":"GwAnirudhYt","port":"36293"}
